# recordlinkage

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  asv.conf.json  build.sh  deploy.sh  pyproject.toml  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py  test.py  tests.sh  tox.ini  versioneer.py
benchmarks/: bench_comparing.py  bench_indexing.py
docs/: Deduplication.rst  Intro example.rst  Linking.rst  Makefile  README.rst  about.rst  advanced_indexing.rst  annotation.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  intro_example.rst  link_two_dataframes.rst  make.bat  methods.rst  performance.rst  ref-classifiers.rst  ref-compare.rst  ref-conflict-resolution.rst  ref-datasets.rst  ref-evaluation.rst  ref-fusion.rst  ref-index.rst  ref-misc.rst  ref-preprocessing.rst  ref-standardise.rst  reference.rst  requirements.txt  sklearn.rst  toolkit.rst
examples/: Deduplication.ipynb  Intro example.ipynb  Linking.ipynb  README.rst  dedup_deterministic.py  link_two_dataframes.ipynb  linking_deterministic.py  notebook_html.bat  supervised_keras.py  supervised_learning_prob.py  unsupervised_learning.py  unsupervised_learning_prob.py
performance/: haversine.ipynb  index_compare_performance.ipynb
recordlinkage/: __init__.py  _version.py  adapters.py  annotation.py  api.py  base.py  classifier.py  classifiers.py  classify.py  compare.py  comparing.py  comparing_depr.py  config.py  config_init.py  deprecated.py  em_algorithm_.py  em_algorithms.py  (+14 more)
(+102 files in other folders)
